k8s/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqail-portal
  namespace: sqail
  labels:
    app: sqail-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqail-portal
  template:
    metadata:
      labels:
        app: sqail-portal
    spec:
      containers:
        - name: sqail-portal
          image: beecodersregistry.azurecr.io/sqail-portal:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: sqail-portal
  namespace: sqail
spec:
  selector:
    app: sqail-portal
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32080
  type: NodePort
